--- a/3-texts/3-curriculum/style.css
+++ b/3-texts/3-curriculum/style.css
@@ -1,34 +1,34 @@
-header {
-    text-align: center;
-    font-size: 50px;
-    font-family:Book Antiqua;
-}
 body {
     width: 1000px;
     height: 1200px;
     margin: auto;
 }
-.personal {
-    position: relative;
-    float:left;
-    margin-top: 40px;
-    margin-right: 250px;
-    padding-left: 25px ;
-    line-height: 1.7;
+
+h1 {
+    text-align: center;
+    font-size: 50px;
+    font-family: Book Antiqua;
 }
+
 li {
     list-style-type: none;
 }
+
+.personal {
+    position: relative;
+    float: left;
+    margin-top: 40px;
+    margin-right: 250px;
+    padding-left: 25px;
+    line-height: 1.7;
+}
+
 img {
     width: 200px;
     height: 250px;
 }
-.perfil {
-   margin-left: 55px;
-   margin-top: 40px;
-}
-.a {
-   margin-left: 55px;
-   margin-top: 40px;
-}  
 
+.parragraphs {
+    margin-left: 55px;
+    margin-top: 40px;
+}
